Bug 788012: Fix build on OpenBSD after bug 579517. r=ehsan